# shiromino

./: .clang-format  .editorconfig  .gitattributes  .gitignore  .gitmodules  .vcpkg-response-file  CHANGELOG.md  CMakeLists.txt  LICENSE  LICENSE-assets  LICENSE-data  LICENSE-src  LICENSE.md  Makefile  README.md  credits.txt  game.cfg  game.ini  icon.icns  shiromino.ini  shiromino.ini.portable  vcpkg.json
.github/workflows/: build  deploy-aur-git-package.yml  fetch-tags  main.yml
assets/font/: fixedsys.fnt
audio/: volume.cfg  volume.ini
cmake/: CPackPostBuildMacOS.cmake  CreateArchive.cmake  InstallRuntimeDependenciesMSVC.cmake  InstallRuntimeDependenciesMacOS.cmake  MacOSXBundleInfo.plist.in  icon.rc
data/audio/: volume.ini
data/font/: fixedsys.fnt
doc/: BUILDING.md  KEYBOARD_SHORTCUTS.md  MODES.md  RUNNING.md
docs/: SDLKeyNames.html  SDLKeycodeLookup.htm  version-history.txt
docs/SDLKeyNames_files/: common.css  fixedleft.js  print.css  screen.css  script.js  styles.css
docs/SDLKeycodeLookup_files/: common.css  fixedleft.js  print.css  projection.css  screen.css  script.js  sorttable.js  styles.css
include/: Config.hpp.in  Version.h.in  configuration.h.in  definitions.h.in  types.h
src/: ARS.cc  ARS.h  AssetDB.cpp  AssetDB.hpp  AssetStore.h  Audio.cc  Audio.cpp  Audio.h  Audio.hpp  CoreState.h  Credits.cc  Credits.h  DASDirection.h  Debug.h  Debug.hpp  Delay.cc  Delay.h  DisplayMode.h  Fixed.hpp  Game.cc  Game.h  GameType.h  Grid.cc  Grid.cpp  Grid.h  Grid.hpp  GuiGridCanvas.cc  GuiGridCanvas.cpp  GuiGridCanvas.h  GuiGridCanvas.hpp  GuiScreenManager.cc  GuiScreenManager.cpp  GuiScreenManager.h  GuiScreenManager.hpp  Input.h  Magic.h  Makefile  MenuOption.cc  MinoCanonicalID.h  MultiEditor.cc  (+140 more)
src/Asset/: Asset.cc  Asset.h  Font.cc  Font.h  Image.cc  Image.h  Music.cc  Music.h  Sfx.cc  Sfx.h
src/Gfx/: Animation.cc  Animation.h  Gfx.cc  Gfx.h  MessageEntity.cc  MessageEntity.h  Screen.cc  TextGraphic.cc  TextGraphic.h
src/Input/: ControllerBindings.cc  ControllerBindings.h  KeyBindings.cc  KeyFlags.cc  Mouse.cc  Mouse.h
src/Main/: Global.cc  Global.h  Main.cc  Startup.cc  Startup.h
src/Menu/: ActionOption.h  GameArguments.h  GameMultiOption.h  GameOption.h  MetaGameOption.h  MultiOption.h  Option.cc  Option.h  TextOption.h  ToggleOption.h
src/Mode/: BaseMode.cc  BaseMode.cpp  BaseMode.h  BaseMode.hpp
src/Mode/G0/: G0MarathonMode.h  G0MarathonMode.hpp
src/Mode/G1/: G1MasterMode.h
src/Mode/G2/: G2DeathMode.hpp  G2MasterMode.hpp
src/Mode/G3/: G3TerrorMode.h
src/Mode/Pentomino/: PentominoCMode.hpp
src/Modes/: BaseMode.hpp
src/Modes/G0/: Marathon.hpp
src/Modes/G1/: Master.hpp
src/Modes/G2/: Death.hpp  Master.hpp
src/Modes/G3/: Terror.hpp
src/Modes/Pentomino/: C.hpp
src/Player/: BasePlayer.h
src/SGUIL/: SGUIL.cc  SGUIL.cpp  SGUIL.h  SGUIL.hpp  SGUIL_GuiButton.cc  SGUIL_GuiButton.cpp  SGUIL_GuiDropDownList.cpp  SGUIL_GuiOptionButton.cpp  SGUIL_GuiTextField.cc  SGUIL_GuiTextField.cpp  SGUIL_GuiWindow.cc  SGUIL_GuiWindow.cpp
src/Video/: Animation.cc  Animation.h  Background.cc  Background.h  Gfx.cc  Gfx.h  MessageEntity.cc  MessageEntity.h  Render.cc  Render.h  Screen.cc  Screen.h  TextGraphic.cc  TextGraphic.h
src/asset/: Asset.cc  Asset.h  Font.cc  Font.h  Image.cc  Image.h  Music.cc  Music.h  Sfx.cc  Sfx.h
src/gui/: Button.cc  GUI.cc  GUI.h  GridCanvas.cc  GridCanvas.h  ScreenManager.cc  ScreenManager.h  TextField.cc  Window.cc
src/input/: ControllerBindings.cc  ControllerBindings.h  KeyBindings.cc  KeyBindings.h  KeyFlags.cc  KeyFlags.h  Mouse.cc  Mouse.h
src/menu/: ActionOption.h  ElementType.h  GameArguments.h  GameOption.h  MetaGameOption.h  MultiOption.h  Option.cc  Option.h  ToggleOption.h
src/modes/: G2_Death.cc  G2_Death.h
src/modes/collection_G2/: Collection_G2.h
src/video/: Animation.cc  Animation.h  Background.cc  Background.h  Draw.cc  Draw.h  Gfx.cc  Gfx.h  MessageEntity.cc  MessageEntity.h  Render.cc  Render.h  Screen.cc  Screen.h  TextGraphic.cc  TextGraphic.h
tests/: Grid_test.cc  QRS_test.cc
